--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
   <body>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <div class="container text-center">
+          <div class="row">
+            <div class="col-5">
+              <P>Optum Care Strategic Platform products are leveraged across Optum Care to support Value-Based Care and Fee for Service Business Models for single and/or multi-payer.</P>
+            
+            </div>
+            <div class="col-7">col</div>
+          </div>
+    </div>
   </body>
 </html>
